2002-06-20  Adrian Aichner  <adrian@xemacs.org>

	* xemacs/mule.texi (Language Environments): Typo fix suggested by
	Frank Schmitt.

2002-06-11  Adrian Aichner  <adrian@xemacs.org>

	* xemacs-faq.texi (Q1.3.7): Update broken link to russian.el
	(found by linklint) with Google's help.

2002-05-25  Adrian Aichner  <adrian@xemacs.org>

	* xemacs/custom.texi (Syntax Entry): Deprecate ` ' in favor of `-'.

2002-06-05  Ben Wing  <ben@xemacs.org>

	* internals/internals.texi (Top):
	* internals/internals.texi (The XEmacs Object System (Abstractly Speaking)):
	* internals/internals.texi (How Lisp Objects Are Represented in C):
	* internals/internals.texi (Major Textual Changes):
	* internals/internals.texi (Great Integral Type Renaming):
	* internals/internals.texi (Text/Char Type Renaming):
	* internals/internals.texi (files): New.

2002-05-04  Stephen J. Turnbull  <stephen@xemacs.org>

	* custom.texi (The Init File): Rewrite completely.

2002-03-19  Adrian Aichner  <adrian@xemacs.org>

	* widget.texi (constants): Typo fix.

2002-02-07  Stephen J. Turnbull  <stephen@xemacs.org>

	* external-widget.texi (External Client Widget Internals): New node.

2001-11-15  Darryl Okahata  <darrylo@xemacs.org>

	* lispref/glyphs.texi:
	lispref/lispref.texi: Add examples of how to insert graphics into a
	buffer.
	
2001-12-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* xemacs/packages.texi (Packages):
	(Package Terminology):
	Carefully distinguish libraries and packages.
	(Package Terminology):
	More careful definitions of ``category'' and ``distribution.''
	Use ``generic'' instead of ``normal'' (N.B. package tools use
	``standard''.)
	(Installing Packages):
	Use @var to mark variable version strings, not @t or <>.
	(Sumo):
	Add disk space estimate when unpacked.

2002-02-06  Stephen J. Turnbull  <stephen@xemacs.org>

	* xemacs-faq.texi (Q1.3.8, Q1.3.9): Unicode support via Mule-UCS.

2002-02-01  Steve Youngs  <youngs@xemacs.org>
