@@ -38,10 +38,6 @@ Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 # define RTLD_LAZY 1
 #endif /* RTLD_LAZY isn't defined under FreeBSD - ick */
 
-#ifndef RTLD_GLOBAL
-# define RTLD_GLOBAL 0
-#endif
-
 #ifndef RTLD_NOW
 # define RTLD_NOW 2
 #endif
@@ -55,7 +51,7 @@ dll_init (const char *arg)
 dll_handle
 dll_open (const char *fname)
 {
-  return (dll_handle) dlopen (fname, RTLD_NOW | RTLD_GLOBAL);
+  return (dll_handle) dlopen (fname, RTLD_NOW);
 }
 
 int
