@@ -1,3 +1,8 @@
+2002-06-17  Jerry James  <james@xemacs.org>
+
+	* emodules.texi (Loading other Modules): Describe why we do not
+	use RTLD_GLOBAL.
+
 2002-06-20  Adrian Aichner  <adrian@xemacs.org>
 
 	* xemacs/mule.texi (Language Environments): Typo fix suggested by
